Update for new program version